--- a/style.css
+++ b/style.css
@@ -1,6 +1,25 @@
+body {
+    background-color: rgb(62, 62, 62);
+}
+h1,h2,h3,h4,h5,h6 {
+    font-family: var(--font-mono);
+    font-size: larger;
+    color: white;
+}
+p {
+    font-family: var(--font-mono);
+    font-size: medium;
+    color: white;
+}
 .topnav {
     background-color: #333;
     overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .topnav a {
@@ -9,6 +28,7 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-family: var(--font-mono);
     font-size: 17px;
 }
 
@@ -18,6 +38,43 @@
 }
 
 .topnav a.active {
-    background-color: #04AA6D;
+    background-color: #00c7dd;
     color:white;
+}
+
+/*Scanlines Credit to Kaweees: https://github.com/Kaweees/kaweees.github.io/commit/2f0a2b45b3c98f97f827d592e605d812f73c0ba3 and Mults for using it in his google clone video*/
+
+.lines::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: linear-gradient(rgba(20, 20, 20, 0) 66%, rgba(0, 0, 0, 0.15) 33%);
+    background-size: 100% 5px;
+    z-index: 9999;
+    pointer-events: none;
+    animation: scanlines-anim 1s linear infinite;
+}
+
+@keyframes scanlines-anim {
+
+    0% {
+
+
+        background-position: 0px 0px;
+
+
+    }
+
+    100% {
+        background-position: 0px 15px;
+    }
+}
+
+@media only screen and (orientation: portrait) {
+    .lines::before {
+        background-size: 100% 4px;
+    }
 }
